--- a/index.html
+++ b/index.html
@@ -2019,8 +2019,8 @@ const STAGES_PRACTICE = [
     return {
       ...base,
       stageName: "Practice",
-      bossName: "能海先生",
-      bossDialogue: "しゃて！",
+      bossName: "Asa",
+      bossDialogue: "Let's practice！",
       midFightDialogue: "",
       // 85% fall speed; spawn rate reduced by an additional 50% (interval x2 vs prior practice):
       spawnEveryMs: Math.round((baseSpawn / 0.85) * 2),
